--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "daisyui": "^2.51.6",
     "rxjs": "~7.8.0",
+    "swiper": "^8.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
